# Finite-Difference-Maxwell-Solver

./: .gitignore  CMakeLists.txt  README.md  config.hpp  main.cpp  render.py
Classes/: grid.cpp  grid.hpp
Classes/Config/: config.hpp
Classes/Grid/: grid.cpp  grid.hpp  grid_constructor.cpp  grid_helpers.cpp  grid_simulation.cpp
Classes/Source/: source.cpp  source.hpp
Classes/Write_Output/: output.cpp  output.hpp
src/: main.cpp  render.py
src/Classes/Config/: config.hpp
src/Classes/Grid/: grid.cpp  grid.hpp
src/Classes/PML/: PML.cpp  PML.hpp
src/Classes/Simulation/: Simulation.cpp  Simulation.hpp
src/Classes/Source/: source.cpp  source.hpp
src/Classes/Validation/: Validation.cpp  Validation.hpp
src/Classes/Write_Output/: output.cpp  output.hpp
